# bridge-mcp

./: .gitignore  ATTRIBUTION.md  INTEGRATION_GUIDE.md  NOTICE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
src/bridge_mcp/: __init__.py  config.py  server.py
src/bridge_mcp/providers/: __init__.py  qtmodel_provider.py
src/bridge_mcp/resources/: __init__.py
src/bridge_mcp/tools/: __init__.py  advanced_boundary.py  checking.py  group_management.py  modifications.py  moving_load.py  queries.py  tendon.py  visualization.py  workflows.py
src/qiao_mcp/: __init__.py  config.py  server.py
src/qiao_mcp/prompts/: __init__.py
src/qiao_mcp/providers/: __init__.py  qtmodel_provider.py
src/qiao_mcp/resources/: __init__.py
src/qiao_mcp/tools/: __init__.py  advanced_boundary.py  checking.py  group_management.py  modifications.py  moving_load.py  queries.py  tendon.py  visualization.py  workflows.py
